2008-04-16  Soren Hauberg  <hauberg@gmail.com>

	* plot/__gnuplot_version__.m: Display error if gnuplot is not found.

2008-04-15  John W. Eaton  <jwe@octave.org>

	* plot/view.m: Get values from current axes if nargin == 0.

2008-04-15  David Bateman  <dbateman@free.fr>

	* plot/__patch__.m: Fix for NaN values in faces of patches.
	
2008-04-14  David Bateman  <dbateman@free.fr>

	* plot/rose.m: Add missing comment mark that causes issues with
	octave-forge function referencing.
	* deprecated/lchol.m, deprecated/splchol.m: Fix texinfo errors.

2008-04-09  John W. Eaton  <jwe@octave.org>

	* deprecated/beta_cdf.m, deprecated/beta_inv.m,
	deprecated/beta_pdf.m, deprecated/beta_rnd.m,
	deprecated/binomial_cdf.m, deprecated/binomial_inv.m,
	deprecated/binomial_pdf.m, deprecated/binomial_rnd.m,
	deprecated/chisquare_cdf.m, deprecated/chisquare_inv.m,
	deprecated/chisquare_pdf.m, deprecated/chisquare_rnd.m,
	deprecated/clearplot.m, deprecated/clg.m, deprecated/com2str.m,
	deprecated/exponential_cdf.m, deprecated/exponential_inv.m,
	deprecated/exponential_pdf.m, deprecated/exponential_rnd.m,
	deprecated/f_cdf.m, deprecated/f_inv.m, deprecated/f_pdf.m,
	deprecated/f_rnd.m, deprecated/gamma_cdf.m,
	deprecated/gamma_inv.m, deprecated/gamma_pdf.m,
	deprecated/gamma_rnd.m, deprecated/geometric_cdf.m,
	deprecated/geometric_inv.m, deprecated/geometric_pdf.m,
	deprecated/geometric_rnd.m, deprecated/hypergeometric_cdf.m,
	deprecated/hypergeometric_inv.m, deprecated/hypergeometric_pdf.m,
	deprecated/hypergeometric_rnd.m, deprecated/intersection.m,
	deprecated/is_bool.m, deprecated/is_complex.m,
	deprecated/is_list.m, deprecated/is_matrix.m,
	deprecated/is_scalar.m, deprecated/is_square.m,
	deprecated/is_stream.m, deprecated/is_struct.m,
	deprecated/is_symmetric.m, deprecated/is_vector.m,
	deprecated/isstr.m, deprecated/lchol.m,
	deprecated/lognormal_cdf.m, deprecated/lognormal_inv.m,
	deprecated/lognormal_pdf.m, deprecated/lognormal_rnd.m,